# nox-uv-demo

./: LICENSE.txt  README.md  noxfile.py  pyproject.toml  uv-installer.sh
.github/workflows/: ci.yml
requirements/: dev.txt  test.txt
src/nox_uv_demo/: __about__.py  __init__.py
tests/: test_streamlit.py
