[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nox-uv-demo"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "MtkN1", email = "51289448+MtkN1@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "streamlit"
]

[project.urls]
Documentation = "https://github.com/unknown/nox-uv-demo#readme"
Issues = "https://github.com/unknown/nox-uv-demo/issues"
Source = "https://github.com/unknown/nox-uv-demo"

[tool.hatch.version]
path = "src/nox_uv_demo/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nox_uv_demo tests}"

[tool.coverage.run]
source_pkgs = ["nox_uv_demo", "tests"]
branch = true
parallel = true
omit = [
  "src/nox_uv_demo/__about__.py",
]

[tool.coverage.paths]
nox_uv_demo = ["src/nox_uv_demo", "*/nox-uv-demo/src/nox_uv_demo"]
tests = ["tests", "*/nox-uv-demo/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
